src/test/ui/consts/const-eval/ub-upvars.64bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-upvars.rs:7:42
   |
LL |     let bad_ref: &'static u16 = unsafe { mem::transmute(0usize) };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a null reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
